# marvel-team-picker-api

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  settings.py
app/: crud.py  database.py  marvel_client.py  models.py  schemas.py  utils.py
