[tool.poetry]
name = "marvel-team-picker-api"
version = "0.1.0"
description = "A FastAPI application to provide Marvel characters to be organized as teams"
authors = ["Cácio Lucas <cclucas060901@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-decouple = "^3.7"
requests = "^2.28.2"
SQLAlchemy = "^2.0.2"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
